# sp4e-homeworks

./: .gitignore  .gitmodules  README.md
homework1/: .gitignore  GMRES.py  README.md  optimizer.py  utils.py
homework2/: CMakeLists.txt  README.md
homework2/src/: CMakeLists.txt  compute_arithmetic.cc  compute_arithmetic.hh  compute_pi.cc  compute_pi.hh  dumper_series.cc  dumper_series.hh  main.cc  parser.cc  parser.hh  plot.py  print_series.cc  print_series.hh  riemann_integral.cc  riemann_integral.hh  series.cc  series.hh  series.txt  write_series.cc  write_series.hh
homework3/: CMakeLists.txt  README.md
homework3/src/: CMakeLists.txt  compute_temperature.cc  compute_temperature.hh  fft.hh  generate_input_csv.py  material_point.cc  material_point.hh  material_points_factory.cc  test_fft.cc  test_temperature.cc
homework4/: README.md
homework4/src/: CMakeLists.txt  compute_error.py  compute_temperature_finite_differences.cc  compute_temperature_finite_differences.hh  matrix.hh  pypart.cc  test_finite_diff.cc  vector.hh
